# OpenBills

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.md  index.html  openbills.html  package.json
desktop/OpenBills.Win/: OpenBills.Win.csproj  Program.cs  app.manifest
scripts/: local-preview-server.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: main.rs
src/db/: bills.ts  database.ts  incomes.ts  payments.ts  settings.ts
src/styles/: globals.css
src/types/: bill.ts  income.ts  settings.ts
src/utils/: calculations.ts  dates.ts  importExport.ts  money.ts
tests/: calculations.test.mjs
