[package]
name = "openbills"
version = "1.0.0"
description = "A privacy-first manual bill tracker"
authors = ["OpenBills contributors"]
edition = "2021"

[lib]
name = "openbills_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
